Change: unbound arrow keys for pane navigation

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,11 @@ bind | split-window -h
 unbind '"'
 bind - split-window -v
 
+unbind Left
+unbind Right
+unbind Up
+unbind Down
+
 # vim nav binds
 bind -r ^ last-window
 bind -r k select-pane -U
