--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,13 +1,17 @@
-
 set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
 
+unbind r
+bind r source-file ~/.dotFiles/.tmux.conf
+
 unbind %
-bind | split-window -h 
+bind | split-window -h -c "#{pane_current_path}"
+
 
 unbind '"'
-bind - split-window -v
+bind - split-window -v -c "#{pane_current_path}"
+
 
 unbind Left
 unbind Right
