--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,17 +1,16 @@
-set -g prefix C-a
-unbind C-b
-bind-key C-a send-prefix
+set-option -sa terminal-overrides ",xterm*:Tc"
 
+unbind C-b
+set -g prefix C-a
+bind C-a send-prefix
 unbind r
 bind r source-file ~/.dotFiles/.tmux.conf
 
 unbind %
 bind | split-window -h -c "#{pane_current_path}"
 
-
 unbind '"'
 bind - split-window -v -c "#{pane_current_path}"
-
 
 unbind Left
 unbind Right
@@ -42,14 +41,34 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 #bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 
-unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
+# don't exit copy mode when dragging with mouse
+unbind -T copy-mode-vi MouseDragEnd1Pane 
+
+set -g @catppuccin_flavour 'frappe' 
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+
+set -g @catppuccin_status_modules_right "directory user host session"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_right_separator_inverse "no"
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+
+set -g @catppuccin_directory_text "#{pane_current_path}"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'catppuccin/tmux'
-
-set -g @catppuccin_flavour 'frappe' 
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
