--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -11,11 +11,11 @@ dynamic_padding = true
 decorations = "Transparent"
 opacity = 0.75
 blur = true
-startup_mode = "Fullscreen"
+# Options: "Maximized", "Maximized", "SimpleFullscreen"
+startup_mode = "Maximized" 
 dynamic_title = true
 
 [font]
 size = 15.5
 normal = {family = "FiraCode Nerd Font Mono", style = "Medium"}
 
-[colors]
