--- a/mac/.skhdrc
+++ b/mac/.skhdrc
@@ -27,12 +27,12 @@ cmd + alt - h : yabai -m window --warp west
 cmd + alt - l : yabai -m window --warp east
 
 # move window to display left and right
-#cmd + shift + alt - h : yabai -m window --display west; yabai -m display --focus west;
-#cmd + shift + alt - l : yabai -m window --display east; yabai -m display --focus east;
+cmd + shift - p : yabai -m window --display west; yabai -m display --focus west;
+cmd + shift - n : yabai -m window --display east; yabai -m display --focus east;
 
 # move window to prev and next space
-cmd + shift - h : yabai -m window --space prev;
-cmd + shift - l : yabai -m window --space next;
+cmd + shift + alt - p : yabai -m window --space prev;
+cmd + shift + alt - n : yabai -m window --space next;
 
 # move window to space #
 cmd + shift - 1 : yabai -m window --space 1;
