--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -8,11 +8,11 @@ TERM = "xterm-256color"
 [window]
 padding = { x = 10, y = 10}
 dynamic_padding = true
-decorations = "Full" # Linux: None | Mac: Transparent
+decorations = "Transparent" # Linux: None | Mac: Transparent
 opacity = 0.90
 blur = true
 # Options: "Maximized", "Fullscreen", "SimpleFullscreen"
-startup_mode = "Windowed" 
+startup_mode = "Maximized" 
 dynamic_title = true
 
 [font]
