--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,6 +1,3 @@
-import = [
-  "~/.config/alacritty/catppuccin-frappe.toml",
-]
 
 [env]
 TERM = "xterm-256color"
@@ -17,4 +14,9 @@ dynamic_title = true
 
 [font]
 size = 15.5
+
+[general]
+import = [
+  "~/.config/alacritty/catppuccin-frappe.toml",
+]
 # normal = {family = "FiraCode Nerd Font Mono", style = "Medium"} # Make sure font is installed
