--- a/.tmux.conf
+++ b/.tmux.conf
@@ -68,7 +68,11 @@ set -g @catppuccin_directory_text "#{pane_current_path}"
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'catppuccin/tmux'
+
+# Theme plugins
+#set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'z3z1ma/tmux-gruvbox'
+set -g @gruvbox_flavour 'material'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
