--- a/linux/.i3/config
+++ b/linux/.i3/config
@@ -309,48 +309,24 @@ exec_always --no-startup-id xmodmap -e "clear lock"
 exec_always --no-startup-id xmodmap -e "keycode 9 = Caps_Lock NoSymbol Caps_Lock"
 exec_always --no-startup-id xmodmap -e "keycode 66 = Escape NoSymbol Escape"
 
-# Color palette used for the terminal ( ~/.Xresources file )
-# Colors are gathered based on the documentation:
-# https://i3wm.org/docs/userguide.html#xresources
-# Change the variable name at the place you want to match the color
-# of your terminal like this:
-# [example]
-# If you want your bar to have the same background color as your 
-# terminal background change the line 362 from:
-# background #14191D
-# to:
-# background $term_background
-# Same logic applied to everything else.
-set_from_resource $term_background background
-set_from_resource $term_foreground foreground
-set_from_resource $term_color0     color0
-set_from_resource $term_color1     color1
-set_from_resource $term_color2     color2
-set_from_resource $term_color3     color3
-set_from_resource $term_color4     color4
-set_from_resource $term_color5     color5
-set_from_resource $term_color6     color6
-set_from_resource $term_color7     color7
-set_from_resource $term_color8     color8
-set_from_resource $term_color9     color9
-set_from_resource $term_color10    color10
-set_from_resource $term_color11    color11
-set_from_resource $term_color12    color12
-set_from_resource $term_color13    color13
-set_from_resource $term_color14    color14
-set_from_resource $term_color15    color15
-
-# hide/unhide i3status bar
-bindsym $mod+m bar mode toggle
+# Theme colors
+# target                 title     bg       text     indicator border
+#client.focused           #f4b8e4   #303446  #c6d0f5  #f2d5cf  #f4b8e4
+#client.focused_inactive  #ca9ee6   #303446  #c6d0f5  #f2d5cf  #ca9ee6
+#client.unfocused         #ca9ee6   #303446  #c6d0f5  #f2d5cf  #ca9ee6
+#client.urgent            #ef9f76   #303446  #ef9f76  #737994  #ef9f76
+#client.placeholder       #737994   #303446  #c6d0f5  #737994  #737994
+#client.background        #303446
 
 # Theme colors
 # target                 title     bg       text     indicator border
-client.focused           #f4b8e4   #303446  #c6d0f5  #f2d5cf  #f4b8e4
-client.focused_inactive  #ca9ee6   #303446  #c6d0f5  #f2d5cf  #ca9ee6
-client.unfocused         #ca9ee6   #303446  #c6d0f5  #f2d5cf  #ca9ee6
-client.urgent            #ef9f76   #303446  #ef9f76  #737994  #ef9f76
-client.placeholder       #737994   #303446  #c6d0f5  #737994  #737994
-client.background        #303446
+client.focused           #d3869b   #282828  #d4be98  #d8a657   #d3869b  # purple
+client.focused_inactive  #928374   #282828  #a89984  #928374   #928374  # grey1
+client.unfocused         #7c6f64   #282828  #a89984  #7c6f64   #7c6f64  # grey0
+client.urgent            #ea6962   #282828  #ea6962  #d8a657   #ea6962  # red
+client.placeholder       #a9b665   #282828  #d4be98  #a9b665   #a9b665  # green
+client.background        #282828                                         # bg0
+
 
 #############################
 ### settings for i3-gaps: ###
